--- a/TOneV2/Code/TOneV2/TOne.Web/Views/Home/Index.cshtml
+++ b/TOneV2/Code/TOneV2/TOne.Web/Views/Home/Index.cshtml
@@ -17,7 +17,8 @@
 <body ng-controller="mainCtrl">
     <a href="#/Default">Default</a> |
     <a href="#/TestView">Test View</a> | 
-    <a href="#/RouteRuleEditor">Route Rule Editor</a> | 
+    <a href="#/RouteRuleManager">Route Rule Manager</a> | 
+    @*<a href="#/RouteRuleEditor">Route Rule Editor</a> |*@ 
     <a href="#/ZingChart">Zing Chart</a> | 
     <a href="#/HighChart">HighChart</a> |
     <a href="#/HighChartSparkline">HighChart Sparkline</a> |
