--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-standard.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-standard.html
@@ -1,40 +1,12 @@
 ﻿<div class="dropdown">
-    <button class="btn btn-default dropdown-toggle" style="width:100%" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
-        <span style="float:left;margin:0px"> {{ctrl.getSelectText()}}</span>
-        <span style="float:right;position:relative;top:10px" class="caret"></span>
+    <button class="btn btn-default dropdown-toggle" style="width:100%;position:relative" type="button" id="dropdownMenuRule" data-toggle="dropdown" aria-expanded="true">
+        <span style="float: left; margin: 0px; ">{{ctrl.getSelectText()}}</span>
+        <span style="position:absolute;top:15px;right:5px" class="caret"></span>
     </button>
-    <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1" ng-class="ctrl.getUlClass()">
-        <li role="presentation" ng-click="ctrl.muteAction($event)">
-            <div style="display: inline-block; width: 220px;">
-                <div style="padding-bottom: 5px; border-bottom: 1px solid #f0f0f0; ">
-                    <div class="inner-addon right-addon">
-                        <i class="glyphicon glyphicon-remove hand-cursor" ng-click="ctrl.clearFilter($event)"></i>
-                        <input type="text" class="form-control input-sm" ng-model="ctrl.filtername" ng-click="ctrl.muteAction($event)" />
-                    </div>
-                </div>
-                <div style="height: 225px; overflow: auto; margin-top: 5px">
-                    <div class="mark-select " ng-click="ctrl.selectValue($event, c)" ng-repeat="c in ctrl.getDatasource() | filter:ctrl.filtername"
-                         style="display: block; padding: 3px 2px 0px 2px; margin: 2px; white-space: normal;" ng-class="ctrl.findExsite(c) > -1 ?'selected':'' ">
-                        <div class="hand-cursor" style="display: inline-block; width:170px; white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{ ctrl.getObjectText(c)}}</div>
-                        <div style="float:right" ng-show="ctrl.selectedValues.indexOf(c) > -1">✔</div>
-                    </div>
-                </div>
-            </div>
-            <div style="border-left:1px solid #f0f0f0;display: inline-block; max-width: 220px; height: 260px; overflow: auto; white-space:normal" ng-show="ctrl.selectedValues.length > 0">
-                <div style="padding:5px ;">
-                    {{ctrl.selectlbl}}
-                    <a href="" class="link" style="position: absolute; right: 5px;" ng-click="ctrl.clearAllSelected($event)">
-                        Clear all
-                        <i class="glyphicon glyphicon-trash hand-cursor "></i>
-                    </a>
-                </div>
-                <div style="height: 225px; overflow: auto;padding-top:5px">
-                    <span class="label custom-label" ng-repeat="obj in ctrl.selectedValues">
-                        {{ctrl.getObjectText(obj)}}
-                        <span class="glyphicon glyphicon-remove hand-cursor" aria-hidden="true" ng-click="ctrl.selectValue($event,obj)"></span>
-                    </span>
-                </div>
-
+    <ul class="dropdown-menu dropdown-menu-custom" style="width:100%" role="menu" aria-labelledby="dropdownMenuRule" ng-mouseenter="ctrl.muteaction($event);">
+        <li role="presentation">
+            <div ng-repeat="c in ctrl.getDatasource()" class="mark-select " ng-click="ctrl.selectValue($event, c)" ng-mouseenter="ctrl.muteaction($event);" style="display: block;padding:2px; margin:2px; white-space: normal;">
+                <div class="hand-cursor" style="display: table-cell;  white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{ctrl.getObjectText(c)}}</div>
             </div>
         </li>
     </ul>
