--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-multiple.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-multiple.html
@@ -13,7 +13,7 @@
                     </div>
                 </div>
                 <div style="height: 225px; overflow: auto; margin-top: 5px">
-                    <div class="mark-select " ng-click="ctrl.selectValue($event, c)" ng-repeat="c in ctrl.getDatasource() | filter:ctrl.filtername"
+                    <div class="mark-select " ng-click="ctrl.selectValue($event, c); refreshOutput(); " ng-repeat="c in ctrl.getDatasource() | filter:ctrl.filtername"
                          style="display: block; padding: 3px 2px 0px 2px; margin: 2px; white-space: normal;" ng-class="ctrl.findExsite(c) > -1 ?'selected':'' ">
                         <div class="hand-cursor" style="display: inline-block; width:170px; white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{ ctrl.getObjectText(c)}}</div>
                         <div style="float:right" ng-show="ctrl.selectedValues.indexOf(c) > -1">✔</div>
@@ -23,7 +23,7 @@
             <div style="border-left:1px solid #f0f0f0;display: inline-block; max-width: 220px; height: 260px; overflow: auto; white-space:normal" ng-show="ctrl.selectedValues.length > 0">
                 <div style="padding:5px ;">
                     {{ctrl.selectlbl}}
-                    <a href="" class="link" style="position: absolute; right: 5px;" ng-click="ctrl.clearAllSelected($event)">
+                    <a href="" class="link" style="position: absolute; right: 5px;" ng-click="ctrl.clearAllSelected($event); refreshOutput();">
                         Clear all
                         <i class="glyphicon glyphicon-trash hand-cursor "></i>
                     </a>
@@ -31,7 +31,7 @@
                 <div style="height: 225px; overflow: auto;padding-top:5px">
                     <span class="label custom-label" ng-repeat="obj in ctrl.selectedValues">
                         {{ctrl.getObjectText(obj)}}
-                        <span class="glyphicon glyphicon-remove hand-cursor" aria-hidden="true" ng-click="ctrl.selectValue($event,obj)"></span>
+                        <span class="glyphicon glyphicon-remove hand-cursor" aria-hidden="true" ng-click=" ctrl.selectValue($event,obj); refreshOutput();"></span>
                     </span>
                 </div>
 
