--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/ZoneTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/ZoneTemplate.html
@@ -1,7 +1,7 @@
 ﻿<div ng-controller="ZoneController">
     <div class="col-lg-2  style-col">
         <div class="dropdown dropdown-custom" id="Zoneddl">
-            <label class="dropdown-toggle hand-cursor" style="padding-top: 6px" id="dropdownMenuZo" data-toggle="dropdown" aria-expanded="true" ng-model='zoneSelectionOption' ng-init="zoneSelectionOption = 1">
+            <label class="dropdown-toggle hand-cursor" style="padding-top: 6px" id="dropdownMenuZo" data-toggle="dropdown" aria-expanded="true" ng-model='zoneSelectionOption' >
                 {{zoneSelectionOption == 1 ? "  Zones: " : "  All Zones Except:"}}
             </label>
             <ul class="dropdown-menu dropdown-menu-custom " role="menu" aria-labelledby="dropdownMenuZo">
