--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleManager.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleManager.html
@@ -20,11 +20,11 @@
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
-                    <div class="outer-loader" ng-show="isloadingdata"></div>
+                    <!--<div class="outer-loader" ng-show="isloadingdata"></div>
                     <div class="loader" ng-show="isloadingdata">
                         <img src="images/loader-mask.gif" />
-                    </div>
-                    <div id="grid1" ui-grid="gridOptionsRouteRule" ui-grid-selection>
+                    </div>-->
+                    <div id="grid1" ui-grid="gridOptionsRouteRule" ui-grid-selection ui-grid-infinite-scroll>
                     </div>
                     <!--<nav>
                         <ul class="pager">
