--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/CodeTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/CodeTemplate.html
@@ -7,7 +7,7 @@
             <input class="form-control" ng-model="code" type="text">
         </div>
         <div style="padding-top:5px">
-            <switch ng-model="subCodes" ng-init="false" class="green"></switch>
+            <switch ng-model="subCodes"  class="green"></switch>
             <label class="control-label" style="padding-top:6px">With Sub Codes</label>           
         </div>
 
