--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/CustomerTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/CustomerTemplate.html
@@ -1,7 +1,7 @@
 ﻿<div ng-controller="CustomerController">
     <div class="col-lg-2  style-col">
         <div class="dropdown dropdown-custom" id="dropdownMenuddl">
-            <label class="dropdown-toggle hand-cursor" style="padding-top: 6px" type="button" id="dropdownMenuCu" data-toggle="dropdown" aria-expanded="true" ng-model='carrierAccountSelectionOption' ng-init="carrierAccountSelectionOption = 1">
+            <label class="dropdown-toggle hand-cursor" style="padding-top: 6px" type="button" id="dropdownMenuCu" data-toggle="dropdown" aria-expanded="true" ng-model='carrierAccountSelectionOption' >
                 {{carrierAccountSelectionOption == 1 ? "  Customers: " : "  All Customers Except:"}}
             </label>
             <ul class="dropdown-menu dropdown-menu-custom " role="menu" aria-labelledby="dropdownMenuCu">
@@ -34,7 +34,7 @@
                         <div style="height: 225px; overflow: auto; margin-top: 5px">
                             <div class="mark-select " ng-click="selectCustomer($event, c)" ng-repeat="c in customers  | filter:filtername" style="display: block; padding: 3px 2px 0px 2px; margin: 2px; white-space: normal;" ng-class="findExsite(selectedCustomers, c.CarrierAccountID, 'CarrierAccountID') > -1 ?'selected':'' ">
                                 <div class="hand-cursor" style="display: inline-block; width:170px; white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{c.Name}}</div>
-                                <div style="float:right" ng-show="selectedCustomers.indexOf(c) > -1">✔</div>
+                                <div style="float:right" ng-show="findExsite(selectedCustomers, c.CarrierAccountID, 'CarrierAccountID') > -1 ">✔</div>
                             </div>
                         </div>
 
