--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleEditor.html
@@ -51,7 +51,7 @@
                         </div>
                     </div>
                 </div>
-                <div ng-include src="routetype.url">
+                <div ng-include src="routetype.url" >
                 </div>
 
             </div>
@@ -93,11 +93,11 @@
             </div>
 
 
-            <div class="row style-row" ng-show="ruletype.url != ''" style="min-height:200px">
+            <div class="row style-row" ng-show="ruletype.name != 'Block Route' && ruletype.url!='' " style="min-height:200px">
                 <div class="col-lg-12  style-col">
                     <h4>{{ruletype.name}} Details:</h4>
                 </div>
-                <div ng-include src="ruletype.url" onload="onloadRuletype()">
+                <div ng-include src="ruletype.url">
 
                 </div>
             </div>
@@ -125,7 +125,7 @@
 
                     </div>
                     <div class="btn-group action-bar-right">
-                        <button style="border-radius: 0px; border-color: transparent;  background-color: transparent; color: #FFF; " type="button" class="btn btn-default btncustom" aria-label="Left Align" ng-click="onclickClear()">Cancel<span style="padding-left:4px" class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
+                        <button style="border-radius: 0px; border-color: transparent;  background-color: transparent; color: #FFF; " type="button" class="btn btn-default btncustom" aria-label="Left Align" ng-click="cancel()">Cancel<span style="padding-left:4px" class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
                         <button style="border-bottom-color: transparent; border-color: transparent; border-radius: 0px; background-color: transparent; color: #FFF; " type="button" class="btn btn-default btncustom" aria-label="Left Align" ng-click="saveRule()">Save<span style="padding-left:4px" class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span></button>
                     </div>
                 </div>
