--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
@@ -32,12 +32,15 @@
     <div class="row">
         <div class="col-lg-2">
             <vr-dropdown type="multiple" datasource="testviewCtrl.customers" datatextfield="Name" datavaluefield="CarrierAccountID"
-                  entityname="Customer" onselectionchange="testviewCtrl.selectedvalues" output="testviewCtrl.output"></vr-dropdown>
+                          entityname="Customer" onselectionchange="testviewCtrl.selectedvalues" selectedvalues="testviewCtrl.output" lastselectedvalue="testviewCtrl.lstselectedcustomer"></vr-dropdown>
         </div>
-
         <div class="col-lg-2">
-            <vr-dropdown datasource="testviewCtrl.routes" datatextfield="name" datavaluefield="value"
-                         entityname="Route" onselectionchange="testviewCtrl.selectedRoutes"></vr-dropdown>
+            <span >Selected Values : </span>
+            <span ng-repeat="c in testviewCtrl.output">{{c.Name}}</span>
+        </div>
+        <div class="col-lg-2">
+            <span>Last Selected Value : </span>
+            <span>{{testviewCtrl.lstselectedcustomer.Name}}</span>
         </div>
 
         <!--<div class="col-lg-2">
@@ -47,7 +50,12 @@
     </div>
     <div class="row">
         <div class="col-lg-2">
-            <span ng-repeat="c in testviewCtrl.output">{{c.Name}}</span>
+            <vr-dropdown datasource="testviewCtrl.routes" datatextfield="name" datavaluefield="value"
+                         entityname="Route" onselectionchange="testviewCtrl.selectedRoutes" lastselectedvalue="testviewCtrl.lstselectedroute"></vr-dropdown>
+        </div>
+        <div class="col-lg-2">
+            <span>Last Selected Value : </span>
+            <span>{{testviewCtrl.lstselectedroute.name}}</span>
         </div>
     </div>
     <!--<div class="=row">
