--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-ondemand.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-ondemand.html
@@ -1,39 +1,44 @@
 ﻿<div class="dropdown">
     <button class="btn btn-default dropdown-toggle" style="width:100%;position:relative" type="button" id="dropdownMenuZ" data-toggle="dropdown" aria-expanded="true">
-        <span style="float:left;margin:0px"> {{getSelectZoneText()}}</span>
+        <span style="float:left;margin:0px"> {{ctrl.getSelectText()}}</span>
         <span style="position:absolute;top:15px;right:5px" class="caret"></span>
     </button>
-    <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenuZ" ng-class="selectedZones.length == 0 ? 'single-col-checklist':'double-col-checklist' ">
-        <li role="presentation" ng-click="muteAction($event)">
+    <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenuZ" ng-class="ctrl.getUlClass()">
+        <li role="presentation" ng-click="ctrl.muteAction($event)">
             <div style="display: inline-block; width: 220px;">
                 <div style="padding-bottom: 5px; border-bottom: 1px solid #f0f0f0; ">
                     <div class="inner-addon right-addon">
-                        <i class="glyphicon icon-loader" ng-show="showloading"></i>
-                        <input class="form-control input-sm" type="text" placeholder="Type 2 characters.." ng-model="filterzone" ng-keyup="searchZones()">
+                        <i class="glyphicon icon-loader" ng-show="ctrl.showloading"></i>
+                        <input class="form-control input-sm" type="text"
+                               placeholder="{{ctrl.limitplaceholder}}" ng-model="ctrl.filtername" ng-keyup="search();">
                     </div>
                 </div>
-                <div ng-show="filterzone.length < 2">Please type {{2 - filterzone.length}} character(s)..</div>
-                <div ng-show="showloading">Loading..</div>
+                <div ng-show="ctrl.filtername.length < ctrl.limitcharactercount">Please type {{ctrl.limitcharactercount - ctrl.filtername.length}} character(s)..</div>
+                <div ng-show="ctrl.showloading">Loading..</div>
                 <div style="height: 225px; overflow: auto; margin-top: 5px">
-                    <div class="mark-select " ng-click="selectZone($event, c)" ng-attr-title="{{c.Name}}" ng-repeat="c in zones" style="display: block;padding:3px 2px 0px 2px; margin:2px; white-space: normal;" ng-class="findExsite(selectedZones, c.ZoneId, 'ZoneId') > -1 ?'selected':'' ">
-                        <div class="hand-cursor" style="display: inline-block; width:170px; white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{c.Name}}</div>
-                        <div style="display:inline-block;float:right" ng-show="findExsite(selectedZones, c.ZoneId, 'ZoneId') > -1 ">✔</div>
+                    <div class="mark-select " ng-click="ctrl.selectValue($event, c); refreshOutput(); "
+                         ng-attr-title="{{ctrl.getObjectText(c)}}"
+                         ng-repeat="c in ctrl.getDatasource()"
+                         style="display:block;padding:3px 2px 0px 2px; margin:2px; white-space:normal;"
+                         ng-class="ctrl.findExsite(c) > -1 ?'selected':'' ">
+                        <div class="hand-cursor" style="display: inline-block; width:170px; white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{ctrl.getObjectText(c)}}</div>
+                        <div style="display:inline-block;float:right" ng-show="ctrl.findExsite(c) > -1">✔</div>
                     </div>
                 </div>
 
             </div>
-            <div style="border-left:1px solid #f0f0f0;display: inline-block; max-width: 220px; height: 260px; overflow: auto; white-space:normal" ng-show="selectedZones.length > 0">
+            <div style="border-left:1px solid #f0f0f0;display: inline-block; max-width: 220px; height: 260px; overflow: auto; white-space:normal" ng-show="ctrl.selectedValues.length > 0">
                 <div style="padding:5px ;">
-                    Selected Zones:
-                    <a href="" class="link" style="position: absolute; right: 5px;" ng-click="muteAction($event);selectedZones.length = 0">
+                    {{ctrl.selectlbl}}
+                    <a href="" class="link" style="position: absolute; right: 5px;" ng-click="ctrl.clearAllSelected($event);  refreshOutput();">
                         Clear all
                         <i class="glyphicon glyphicon-trash hand-cursor "></i>
                     </a>
                 </div>
                 <div style="height: 225px; overflow: auto;padding-top:5px">
-                    <span class="label custom-label" ng-repeat="obj in selectedZones">
-                        {{obj.Name}}
-                        <span class="glyphicon glyphicon-remove hand-cursor" aria-hidden="true" ng-click="selectZone($event,obj)"></span>
+                    <span class="label custom-label" ng-repeat="obj in ctrl.selectedValues">
+                        {{ctrl.getObjectText(obj)}}
+                        <span class="glyphicon glyphicon-remove hand-cursor" aria-hidden="true" ng-click=" ctrl.selectValue($event,obj); refreshOutput();"></span>
                     </span>
                 </div>
 
