--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
@@ -31,8 +31,8 @@
 
     <div class="row">
         <div class="col-lg-2">
-            <vr-dropdown type="multiple" datasource="testviewCtrl.customers" datatextfield="Name" datavaluefield="CarrierAccountID" 
-                          entityname="Customer" onselectionchange="testviewCtrl.selectedvalues" selectedvalues="testviewCtrl.output" lastselectedvalue="testviewCtrl.lstselectedcustomer"></vr-dropdown>
+            <vr-dropdown type="ondemand" datasource="testviewCtrl.zones" datatextfield="Name" datavaluefield="ZoneId"
+                         onsearch="testviewCtrl.onsearch" entityname="Customer" onselectionchange="testviewCtrl.selectedvalues" selectedvalues="testviewCtrl.output" lastselectedvalue="testviewCtrl.lstselectedcustomer"></vr-dropdown>
         </div>
         <div class="col-lg-2">
             <span >Selected Values : </span>
