--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleManager.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleManager.html
@@ -18,20 +18,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
 
-                    <!--<div class="outer-loader" ng-show="isloadingdata"></div>
-                    <div class="loader" ng-show="isloadingdata">
-                        <img src="images/loader-mask.gif" />
-                    </div>-->
-                    <div id="grid1" ui-grid="gridOptionsRouteRule" ui-grid-selection ui-grid-infinite-scroll>
+                   
+                    <div id="grid1"  ui-grid="gridOptionsRouteRule" ui-grid-selection ui-grid-infinite-scroll ui-grid-resize-columns>
                     </div>
-                    <!--<nav>
-                        <ul class="pager">
-                            <li ng-show="pageNumber>1" ng-click="goPrevious()" class="previous"><a href=""><span aria-hidden="true">&larr;</span> Previous</a></li>
-                            <li ng-show="last" ng-click="goNext()" class="next"><a href="">Next <span aria-hidden="true">&rarr;</span></a></li>
-                        </ul>
-                    </nav>-->
+                    
 
                 </div>
 
