--- a/CLITester/CLITesterSite/Site.master
+++ b/CLITester/CLITesterSite/Site.master
@@ -19,8 +19,9 @@
 	<link href="assets/css/style-responsive.css" rel="stylesheet" type="text/css"/>
 	<link href="assets/css/themes/light.css" rel="stylesheet" type="text/css" id="style_color"/>
 	<link href="assets/plugins/uniform/css/uniform.default.css" rel="stylesheet" type="text/css"/>
+    
 	<!-- END GLOBAL MANDATORY STYLES -->
-	<link rel="shortcut icon" href="favicon.ico" />
+	<link rel="shortcut icon" href="assets/img/favicon.ico" />
     <asp:ContentPlaceHolder id="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
@@ -170,24 +171,7 @@
             };
 
             
-            form1.find('.valStringRemote').each(function () {
-                $(this).rules('add', {
-                    required: true,
-                    minlength: 3,
-                    remote: {
-                        url: "HandlerRemoteValidation.ashx",
-                        type: "POST",
-                        cache: false,
-                        dataType: "json",
-                        dataFilter: function (response) {
-                            return checkSuccess(response);
-                        }
-                    },
-                    messages: { 
-                        remote: "Short Name Exist"
-                }
-                });
-            });
+            
 
 
             form1.find('.valEmail').each(function () {
@@ -319,6 +303,8 @@
             });
 
         }
+
+    
 
     </script>
     <!-- END VALIDATION PLUGINS -->
