--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Styles/Styles.css
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Styles/Styles.css
@@ -135,6 +135,9 @@
 .action-bar-right button{
     float:right !important ;
 }
+.action-bar-right div{
+    float:right !important ;
+}
 .btncustom:hover{
  
     opacity:0.99;
@@ -161,6 +164,7 @@
 }
 label{
     font-weight:normal;
+    color: #635F5F;
 }
 body{
      background-color:#f0f0f0;
@@ -289,6 +293,15 @@ body{
   color:#fff;
   border:none;
 }
+input.ui-grid-filter-input[type="text"] {
+    padding: 0px;
+    margin: 0px;
+    width: 100%;
+    border: 1px solid #D4D4D4;
+    border-radius: 0px;
+    background-clip: padding-box;
+    color: #000;
+}
 .ui-grid-cell {
     border:none;
 }
@@ -314,8 +327,15 @@ body{
     position: absolute;
     left: 50%;
     z-index: 100;
-    top: 100px;
+    bottom: 10px;
 }
 .grid-class{
     height : 100% !important;
+}
+
+.required-inpute{  
+    border-color: #D44A47;
+    outline: 0px none;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 2px rgba(195, 127, 122, 0.85);
+
 }
