--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleEditor.html
@@ -5,11 +5,23 @@
     <div class="panel panel-primary panel-over-color">
         <div class="panel-body">
             <div class="row style-row">
-                <div class="col-lg-12" style="text-align:center">
-                    <h3>
-                        Customer Route Rule Editor
-                    </h3>
-                </div>
+                <nav class="navbar navbar-default navbar-fixed-top">
+                    <div class="container-fluid">
+                        <div class="row pad-top-m">
+                            <div class="col-lg-12 col-no-padding">
+                                <div class="action-bar">
+                                    <div class="btn-group action-bar-left">
+
+                                    </div>
+                                    <div class="btn-group action-bar-right">
+                                        <button style="border-radius: 0px; border-color: transparent;  background-color: transparent; color: #FFF; " type="button" class="btn btn-default btncustom" aria-label="Left Align" ng-click="cancel()">Cancel<span style="padding-left:4px" class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
+                                        <button style="border-bottom-color: transparent; border-color: transparent; border-radius: 0px; background-color: transparent; color: #FFF; " type="button" class="btn btn-default btncustom" aria-label="Left Align" ng-click="saveRule()">Save<span style="padding-left:4px" class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span></button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </nav>
             </div>            
             <div class="row style-row">
                 <div class="col-lg-2  style-col">
@@ -17,8 +29,8 @@
                 </div>
                 <div class="col-lg-2 style-col">
 
-                    <div class="dropdown">
-                        <button class="btn btn-default dropdown-toggle" style="width:100%;position:relative" type="button" id="dropdownMenuRule" data-toggle="dropdown" aria-expanded="true">
+                    <div class="dropdown" >
+                        <button class="btn btn-default dropdown-toggle" ng-class="isvalidcomp('ruletype')" style="width:100%;position:relative" type="button" id="dropdownMenuRule" data-toggle="dropdown" aria-expanded="true">
                             <span style="float: left; margin: 0px; ">{{ruletype.name}}</span>
                             <span style="position:absolute;top:15px;right:5px" class="caret"></span>
                         </button>
@@ -116,21 +128,3 @@
     </div>
     <div id="notification"> </div>
 </div>
-<nav class="navbar navbar-default navbar-fixed-bottom">
-    <div class="container-fluid">
-        <div class="row pad-top-m">
-            <div class="col-lg-12 col-no-padding">
-                <div class="action-bar">
-                    <div class="btn-group action-bar-left">
-
-                    </div>
-                    <div class="btn-group action-bar-right">
-                        <button style="border-radius: 0px; border-color: transparent;  background-color: transparent; color: #FFF; " type="button" class="btn btn-default btncustom" aria-label="Left Align" ng-click="cancel()">Cancel<span style="padding-left:4px" class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
-                        <button style="border-bottom-color: transparent; border-color: transparent; border-radius: 0px; background-color: transparent; color: #FFF; " type="button" class="btn btn-default btncustom" aria-label="Left Align" ng-click="saveRule()">Save<span style="padding-left:4px" class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span></button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </div>
-</nav>
