validation check In
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C21744

--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/CustomerTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/CustomerTemplate.html
@@ -16,7 +16,7 @@
     </div>
     <div class="col-lg-2  style-col">
         <div class="dropdown">
-            <button class="btn btn-default dropdown-toggle" style="width:100%;position:relative" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
+            <button ng-class="isvalidCompCus()" class="btn btn-default dropdown-toggle" style="width:100%;position:relative" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
                 <span style="float:left;margin:0px"> {{getSelectCustomerText()}}</span>
                 <span style="position:absolute;top:15px;right:5px" class="caret"></span>
             </button>
