--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Styles/Styles.css
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Styles/Styles.css
@@ -339,3 +339,7 @@ input.ui-grid-filter-input[type="text"] {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 2px rgba(195, 127, 122, 0.85);
 
 }
+.blueIcon {
+    background-color: rgb(240, 240, 240) !important;
+    color: #69849B !important;
+}
