--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleManager.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleManager.html
@@ -12,7 +12,7 @@
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 pad-top col-no-padding">
                     <div class="action-bar">
                         <div class="btn-group action-bar-left">
-                            <label style="display: inline-block; color: #fff; padding-left:5px">Visible Rows:</label>
+                            <label style="display: inline-block; color: #fff; padding:5px 0px 0px 5px;">Visible Rows:</label>
                             <div class="dropdown" style="display:inline-block">
                                 <label class=" dropdown-toggle hand-cursor" style="width:50px;position:relative;float:none;color:#fff" type="button" id="dropdownMenuRule" data-toggle="dropdown" aria-expanded="true">
                                     <span style="margin: 0px; ">{{numberoflines}}</span>
@@ -28,12 +28,12 @@
                                     </li>
                                 </ul>
                             </div>
-                            <button style="border-radius: 0px; border-color: transparent;  background-color: transparent; color: #FFF; " type="button" class="btn btn-default btncustom" aria-label="Left Align" ng-click="toggelFilter()"><span style="padding-left:4px" class="glyphicon glyphicon glyphicon glyphicon-zoom-in" aria-hidden="true"></span></button>
+                            <button  style="border-radius: 0px; border-color: transparent; background-color: transparent; color: #FFF;" type="button" class="btn btn-default btncustom" aria-label="Left Align" ng-click="toggelFilter()"><span style="padding-left:4px" class="glyphicon glyphicon glyphicon glyphicon-zoom-in" aria-hidden="true"></span></button>
 
 
                         </div>
                         <div class="btn-group action-bar-right">
-                            <button style="border-radius: 0px; border-color: transparent;  background-color: transparent; color: #FFF; " type="button" class="btn btn-default btncustom" aria-label="Left Align" ng-click="AddNewRoute()">Add<span style="padding-left:4px" class="glyphicon glyphicon glyphicon-plus-sign" aria-hidden="true"></span></button>
+                            <button style="border-radius: 0px; border-color: transparent;  background-color: transparent; color: #FFF;float:none " type="button" class="btn btn-default btncustom" aria-label="Left Align" ng-click="AddNewRoute()">Add<span style="padding-left:4px" class="glyphicon glyphicon glyphicon-plus-sign" aria-hidden="true"></span></button>
 
                         </div>
                     </div>
