--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/PriorityTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/PriorityTemplate.html
@@ -1,6 +1,6 @@
 ﻿<div ng-controller="PriorityController">
     <div class="col-lg-2 style-col">
-        <div class="dropdown">
+        <div class="dropdown" id="dropdownSup">
             <button class="btn btn-default dropdown-toggle" style="width:100%;position:relative" type="button" id="dropdownMenuS" data-toggle="dropdown" aria-expanded="true">
                 <span style="float:left;margin:0px"> {{getSelectSuppliersText()}}</span>
                 <span style="position:absolute;top:15px;right:5px" class="caret"></span>
