--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleManager.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleManager.html
@@ -28,7 +28,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <button  style="border-radius: 0px; border-color: transparent; background-color: transparent; color: #FFF;" type="button" class="btn btn-default btncustom" aria-label="Left Align" ng-click="toggelFilter()"><span style="padding-left:4px" class="glyphicon glyphicon glyphicon glyphicon-zoom-in" aria-hidden="true"></span></button>
+                            <button ng-class="gridOptionsRouteRule.enableFiltering==true?'':'toggle-Icon'" style="border-radius: 0px; border-color: transparent; background-color: transparent; color: #FFF;" type="button" class="btn btn-default btncustom" aria-label="Left Align" ng-click="toggelFilter()"><span style="padding-left:4px" class="glyphicon glyphicon glyphicon glyphicon-zoom-in" aria-hidden="true"></span></button>
 
 
                         </div>
