--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Styles/Styles.css
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Styles/Styles.css
@@ -339,7 +339,57 @@ input.ui-grid-filter-input[type="text"] {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 2px rgba(195, 127, 122, 0.85);
 
 }
-.blueIcon {
-    background-color: rgb(240, 240, 240) !important;
-    color: #69849B !important;
+.toggle-Icon {
+    opacity: 0.7 !important;
+}
+.tooltip-error {
+    display: inline;
+    padding: 5px;
+    margin: 5px;
+    position: absolute;
+    top: 0px;
+    left: 100%;
+    z-index: 100;
+    color: #a94442;
+    background-color: rgba(242, 222, 222, 1);
+    border: 1px solid transparent;
+    border-radius: 4px;
+    font-size: 10px;
+    width:auto;
+    min-width:200px;
+    -webkit-opacity: 0.25;
+  -webkit-transition: all 3s ease;
+  -moz-transition: all 3s ease;
+  -ms-transition: all 3s ease;
+  -o-transition: all 3s ease;
+  transition: all 3s ease;
+}
+.tooltip-error:after, .tooltip-error:before {
+	right: 100%;
+	top: 33%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	pointer-events: none;
+}
+
+.tooltip-error:after {
+    border-right-color: #88b7d5 rgba(136, 183, 213, 0) rgba(136, 183, 213, 0);
+    border-width: 4px;
+    margin-left: -5px;
+}
+.tooltip-error:before {
+	border-color: rgba(136, 183, 213, 0) #D5AB88 rgba(136, 183, 213, 0) rgba(136, 183, 213, 0);
+    border-width: 4px;
+    margin-left: -5px;
+}
+
+.tooltip-error {
+    transition: 0.5s linear all;
+    opacity: 1;
+}
+.tooltip-error.ng-hide {
+    opacity: 0;
 }
