--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/CodeTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/CodeTemplate.html
@@ -4,8 +4,8 @@
     </div>
     <div class="col-lg-2  style-col">
         <div>
-            <input class="form-control" ng-model="code" type="text">
-        </div>
+            <number-filed  input-value="code"  />
+</div>
         <div style="padding-top:5px">
             <switch ng-model="subCodes"  class="green"></switch>
             <label class="control-label" style="padding-top:6px">With Sub Codes</label>           
