--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/ZoneTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/ZoneTemplate.html
@@ -15,7 +15,7 @@
         </div>
     </div>
     <div class="col-lg-2  style-col">
-        <div class="dropdown">
+        <div class="dropdown" id="dropdownZones">
             <button class="btn btn-default dropdown-toggle" style="width:100%;position:relative" type="button" id="dropdownMenuZ" data-toggle="dropdown" aria-expanded="true">
                 <span style="float:left;margin:0px"> {{getSelectZoneText()}}</span>
                 <span style="position:absolute;top:15px;right:5px" class="caret"></span>
