Add DropDown Menu template
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C21825

--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
@@ -50,7 +50,7 @@
     </div>
     <div class="row">
         <div class="col-lg-2">
-            <vr-dropdown datasource="testviewCtrl.routes" datatextfield="name" datavaluefield="value"
+            <vr-dropdown type="menu" datasource="testviewCtrl.routes" datatextfield="name" datavaluefield="value"
                          entityname="Route" onselectionchange="testviewCtrl.selectedRoutes" lastselectedvalue="testviewCtrl.lstselectedroute"></vr-dropdown> <!--   -->
         </div>
         <div class="col-lg-2">
