Add dropdown menu type
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C21826

--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-menu.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-menu.html
@@ -2,12 +2,12 @@
     <label id="dropdownMenuType" class="dropdown-toggle" style="padding-top:6px" data-toggle="dropdown" aria-expanded="true">
         <label class="hand-cursor" style="display: inline-block; min-width: 100px; font-size: 12px; border-width: 0px 0px 1px 1px;border-style: solid;border-color: #F0F0F0;
  border-bottom-left-radius: 4px; padding: 5px; ">
-            By {{ctrl.getSelectText()}}<span style="float:right;top:8px;position:relative" class="caret"></span>
+            By {{ctrl.getLastSelectedValue()}}<span style="float:right;top:8px;position:relative" class="caret"></span>
         </label>
     </label>
     <ul class="dropdown-menu dropdown-menu-custom menu-right" role="menu" aria-labelledby="dropdownMenuType" ng-mouseenter="ctrl.muteaction($event);">
         <li role="presentation">
-            <div ng-repeat="r in ctrl.getDatasource()" class="mark-select " ng-mouseenter="ctrl.muteaction($event);" ng-click="ctrl.selectValue($event, c); refreshOutput();"
+            <div ng-repeat="c in ctrl.getDatasource()" class="mark-select " ng-mouseenter="ctrl.muteaction($event);" ng-click="ctrl.selectValue($event, c); refreshOutput();"
                  style="display: block;padding:2px; margin:2px; white-space: normal;">
                 <div class="hand-cursor" style="display: table-cell;  white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{ctrl.getObjectText(c)}}</div>
             </div>
