--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
@@ -31,8 +31,9 @@
 
     <div class="row">
         <div class="col-lg-2">
-            <!--<vr-dropdown type="ondemand" datasource="testviewCtrl.zones" datatextfield="Name" datavaluefield="ZoneId"
-                         onsearch="testviewCtrl.onsearch" entityname="Customer" onselectionchange="testviewCtrl.selectedvalues" selectedvalues="testviewCtrl.output" lastselectedvalue="testviewCtrl.lstselectedcustomer"></vr-dropdown>-->
+            <vr-dropdown type="ondemand" datasource="testviewCtrl.zones" datatextfield="Name" datavaluefield="ZoneId"
+                         onsearch="testviewCtrl.onsearch" entityname="Zone" onselectionchange="testviewCtrl.selectedvalues" 
+                         selectedvalues="testviewCtrl.output" lastselectedvalue="testviewCtrl.lstselectedcustomer"></vr-dropdown>
         </div>
         <div class="col-lg-2">
             <span >Selected Values : </span>
@@ -50,8 +51,8 @@
     </div>
     <div class="row">
         <div class="col-lg-2">
-            <vr-dropdown type="menu" datasource="testviewCtrl.routes" datatextfield="name" datavaluefield="value"
-                         entityname="Route" onselectionchange="testviewCtrl.selectedRoutes" lastselectedvalue="testviewCtrl.lstselectedroute"></vr-dropdown> <!--   -->
+            <!--<vr-dropdown type="menu" datasource="testviewCtrl.routes" datatextfield="name" datavaluefield="value"
+                         entityname="Route" onselectionchange="testviewCtrl.selectedRoutes" lastselectedvalue="testviewCtrl.lstselectedroute"></vr-dropdown>--> <!--   -->
         </div>
         <div class="col-lg-2">
             <span>Last Selected Value : </span>
