--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-ondemand.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-ondemand.html
@@ -16,7 +16,7 @@
                 <div ng-show="ctrl.filtername.length < ctrl.limitcharactercount">Please type {{ctrl.limitcharactercount - ctrl.filtername.length}} character(s)..</div>
                 <div ng-show="ctrl.showloading">Loading..</div>
                 <div style="height: 225px; overflow: auto; margin-top: 5px">
-                    <div class="mark-select " ng-click="ctrl.selectValue($event, c); refreshOutput(); "
+                <div class="mark-select " ng-click="selectValue($event, c); "
                          ng-attr-title="{{ctrl.getObjectText(c)}}"
                          ng-repeat="c in ctrl.getDatasource()"
                          style="display:block;padding:3px 2px 0px 2px; margin:2px; white-space:normal;"
@@ -27,18 +27,18 @@
                 </div>
 
             </div>
-            <div style="border-left:1px solid #f0f0f0;display: inline-block; max-width: 220px; height: 260px; overflow: auto; white-space:normal" ng-show="ctrl.selectedValues.length > 0">
+            <div style="border-left:1px solid #f0f0f0;display: inline-block; max-width: 220px; height: 260px; overflow: auto; white-space:normal" ng-show="ctrl.selectedvalues.length > 0">
                 <div style="padding:5px ;">
                     {{ctrl.selectlbl}}
-                    <a href="" class="link" style="position: absolute; right: 5px;" ng-click="ctrl.clearAllSelected($event);  refreshOutput();">
+                    <a href="" class="link" style="position: absolute; right: 5px;" ng-click="clearAllSelected($event);  ">
                         Clear all
                         <i class="glyphicon glyphicon-trash hand-cursor "></i>
                     </a>
                 </div>
                 <div style="height: 225px; overflow: auto;padding-top:5px">
-                    <span class="label custom-label" ng-repeat="obj in ctrl.selectedValues">
+                    <span class="label custom-label" ng-repeat="obj in ctrl.selectedvalues">
                         {{ctrl.getObjectText(obj)}}
-                        <span class="glyphicon glyphicon-remove hand-cursor" aria-hidden="true" ng-click=" ctrl.selectValue($event,obj); refreshOutput();"></span>
+                        <span class="glyphicon glyphicon-remove hand-cursor" aria-hidden="true" ng-click="selectValue($event,obj); "></span> 
                     </span>
                 </div>
 
